--- a/index.html
+++ b/index.html
@@ -1,45 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
+      <link
+         rel="icon"
+         type="image/png"
+         sizes="32x32"
+         href="./images/favicon-32x32.png"
+      />
+      <link rel="stylesheet" href="/dist/css/main.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+      <title>Frontend Mentor | Four card feature section</title>
+   </head>
+   <body>
+      <div class="container">
+         <div class="hero-title">
+            <h1>
+               Reliable, efficient delivery <span>Powered by Technology</span>
+            </h1>
+            <p>
+               Our Artificial Intelligence powered tools use millions of project
+               data points to ensure that your project is successful
+            </p>
+         </div>
+         <div class="cards">
+            <div class="card card-1">
+               <span class="card-top"></span>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+               <h3>Supervisor</h3>
+               <p>Monitors activity to identify project roadblocks</p>
+               <img src="/images/icon-supervisor.svg" alt="" />
+            </div>
+            <div class="card card-2">
+               <span class="card-top"></span>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+               <h3>Team Builder</h3>
+               <p>
+                  Scans our talent network to create the optimal team for your
+                  project
+               </p>
+               <img src="/images/icon-team-builder.svg" alt="" />
+            </div>
+            <div class="card card-3">
+               <span class="card-top"></span>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+               <h3>Karma</h3>
+               <p>Regularly evaluates our talent to ensure quality</p>
+               <img src="/images/icon-karma.svg" alt="" />
+            </div>
+            <div class="card card-4">
+               <span class="card-top"></span>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+               <h3>Calculator</h3>
+               <p>
+                  Uses data from past projects to provide better delivery
+                  estimates
+               </p>
+               <img src="/images/icon-calculator.svg" alt="" />
+            </div>
+         </div>
+      </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+      <!--    Karma Regularly evaluates our talent to
+      ensure quality Calculator Uses data from past projects to provide better
+      delivery estimates -->
+   </body>
 </html>
