--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                data points to ensure that your project is successful
             </p>
          </div>
-         <div class="cards">
+         <div class="cards-wrap">
             <div class="card card-1">
                <span class="card-top"></span>
 
