--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          sizes="32x32"
          href="./images/favicon-32x32.png"
       />
-      <link rel="stylesheet" href="/dist/css/main.css" />
+      <link rel="stylesheet" href="./dist/css/main.css" />
 
       <title>Frontend Mentor | Four card feature section</title>
    </head>
@@ -32,7 +32,7 @@
 
                <h3>Supervisor</h3>
                <p>Monitors activity to identify project roadblocks</p>
-               <img src="/images/icon-supervisor.svg" alt="" />
+               <img src="./images/icon-supervisor.svg" alt="" />
             </div>
             <div class="card card-2">
                <span class="card-top"></span>
@@ -42,14 +42,14 @@
                   Scans our talent network to create the optimal team for your
                   project
                </p>
-               <img src="/images/icon-team-builder.svg" alt="" />
+               <img src="./images/icon-team-builder.svg" alt="" />
             </div>
             <div class="card card-3">
                <span class="card-top"></span>
 
                <h3>Karma</h3>
                <p>Regularly evaluates our talent to ensure quality</p>
-               <img src="/images/icon-karma.svg" alt="" />
+               <img src="./images/icon-karma.svg" alt="" />
             </div>
             <div class="card card-4">
                <span class="card-top"></span>
@@ -59,7 +59,7 @@
                   Uses data from past projects to provide better delivery
                   estimates
                </p>
-               <img src="/images/icon-calculator.svg" alt="" />
+               <img src="./images/icon-calculator.svg" alt="" />
             </div>
          </div>
       </div>
